@@ -1,0 +1,6 @@
+include "gdal.pxi"
+
+cdef int install_filepath_plugin(VSIFilesystemPluginCallbacksStruct *callbacks_struct)
+cdef void uninstall_filepath_plugin(VSIFilesystemPluginCallbacksStruct *callbacks_struct)
+
+
